--- a/src/components/game-board/LetterTile.module.css
+++ b/src/components/game-board/LetterTile.module.css
@@ -4,6 +4,16 @@
     width: 3rem;
     font-size: 2.25rem;
     margin: 0 1rem;
+    color: blue;
+}
+
+.number {
+    border-bottom: 2px solid black;
+    height: 3rem;
+    width: 3rem;
+    font-size: 2.25rem;
+    margin: 0 1rem;
+    color: lightslategray;
 }
 
 .punctuation {
